# advent-of-code-2021

./: .JuliaFormatter.toml  .eslintrc  .gitignore  Cargo.toml  antora-playbook.yml  package-lock.json  package.json  readme.md  rustfmt.toml  symlink_solutions.py
Day 1/: aoc_01_1.jl  aoc_01_2.jl  aoc_01_setup.jl
Docs/: advent_of_code_2021.adoc  advent_of_code_2021.html  aoc.css  docinfo.html  iosevka.css  syntax-highlighter.rb
Docs/adoc_ruby/: aoc-day-link-inserter.rb  input-link-inserter.rb  source-includer.rb  source_includer.rb
docs/: 404.html  advent_of_code_2021.adoc  advent_of_code_2021.html  aoc.css  build_docs.sh  docinfo.html  index.html  iosevka.css  search-index.js
docs.bak/: advent_of_code_2021.adoc  aoc.css  shared.adoc
docs.bak/adoc_ruby/: input-link-inserter.rb
docs.bak/day_adocs/: day_01.adoc  day_03.html  day_06.adoc  day_07.adoc  day_07.html  day_08.html  day_12.adoc  day_13.adoc  day_14.adoc  day_17.adoc  day_19.adoc  day_21.adoc  day_23.adoc  day_24.adoc  day_25.adoc
docs/adoc_ruby/: syntax-highlighter.rb
docs/advent-of-code-2021/: index.html
docs/day_adocs/: day_01.adoc  day_01.html  day_02.adoc  day_02.html  day_03.adoc  day_03.html  day_04.adoc  day_04.html  day_05.adoc  day_05.html  day_06.adoc  day_06.html  day_07.adoc  day_07.html  day_08.adoc  day_08.html  day_09.adoc  day_09.html  day_10.adoc  day_10.html  day_11.adoc  day_11.html  day_12.adoc  day_12.html  day_13.adoc  day_13.html  day_14.adoc  day_14.html  day_15.adoc  day_15.html  (+20 more)
lib/: adoc-extensions.js
solutions/: antora.yml
src/: lib.rs  main.rs  utils.rs
(+179 files in other folders)
